--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,6 +5,8 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Building..'
+                sh './gradlew build --no-deamon'
+                archiveArtifacts artifacts: 'dist/trainSchedule.zip'
             }
         }
     }
